# SciAtlas

./: .env.example  .gitignore  README.md  README_zh.md  run_sciatlas.py  run_scischolar.py  sciatlas.cmd  scischolar.cmd
agent-skill/: README.md
agent-skill/sciatlas-idea-evaluate/: SKILL.md
agent-skill/sciatlas-idea-evaluate/agents/: openai.yaml
agent-skill/sciatlas-idea-generate/: SKILL.md
agent-skill/sciatlas-idea-grounding/: SKILL.md
agent-skill/sciatlas-literature-review/: SKILL.md
agent-skill/sciatlas-quick-paper-search/: SKILL.md
agent-skill/sciatlas-researcher-review/: SKILL.md
agent-skill/sciatlas-trend-report/: SKILL.md
agent-skill/scinet-idea-evaluate/: SKILL.md
agent-skill/scinet-idea-generate/: SKILL.md
agent-skill/scinet-idea-grounding/: SKILL.md
agent-skill/scinet-literature-review/: SKILL.md
agent-skill/scinet-quick-paper-search/: SKILL.md
agent-skill/scinet-researcher-review/: SKILL.md
agent-skill/scinet-trend-report/: SKILL.md
agent-skill/scischolar-idea-evaluate/: SKILL.md
agent-skill/scischolar-idea-generate/: SKILL.md
agent-skill/scischolar-idea-grounding/: SKILL.md
agent-skill/scischolar-literature-review/: SKILL.md
agent-skill/scischolar-quick-paper-search/: SKILL.md
agent-skill/scischolar-researcher-review/: SKILL.md
agent-skill/scischolar-trend-report/: SKILL.md
docs/api/: index.html
references/: README.md
references/search/: README.md
sciatlas/: .env.example  MANIFEST.in  README.md  README_skills.md  __init__.py  cli.py  pyproject.toml
sciatlas/core/: __init__.py  api_client.py  common.py  schemas.py
sciatlas/evidence/: grounding.py  pdf_manifest.py
sciatlas/examples/: idea_evaluate.sh  literature_review.sh  search_papers.sh
sciatlas/src/sciatlas/: __init__.py  builtin_skills.json  cli.py  client.py  config.py  skills.py
sciatlas/tasks/: _shared.py  dispatcher.py
sciatlas/tests/: test_import.py
scinet/: .env.example  README.md  README_skills.md  cli.py  pyproject.toml
scinet/core/: api_client.py
scinet/evidence/: pdf_manifest.py
scinet/src/scinet/: __init__.py  builtin_skills.json  cli.py  client.py  config.py  skills.py
scinet/src/scischolar/: __init__.py
scinet/tasks/: _shared.py
scischolar/: .env.example  MANIFEST.in  README.md  __init__.py  cli.py  pyproject.toml
scischolar/core/: __init__.py  api_client.py  common.py  schemas.py
scischolar/evidence/: grounding.py
scischolar/examples/: idea_evaluate.sh  literature_review.sh  search_papers.sh
scischolar/tasks/: _shared.py  dispatcher.py
scischolar/tests/: test_import.py
(+25 files in other folders)
