[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sciatlas-client"
version = "0.1.0"
description = "SciAtlas client and CLI for scientific knowledge-graph retrieval."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "SciAtlas Team" }
]
keywords = [
  "scientific discovery",
  "knowledge graph",
  "paper retrieval",
  "research agent",
  "literature review",
  "AI for science"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]
dependencies = [
  "httpx>=0.27,<1"
]

[project.urls]
Homepage = "https://github.com/zjunlp/SciAtlas"
Repository = "https://github.com/zjunlp/SciAtlas"
API = "http://scinet.openkg.cn"
Registration = "http://scinet.openkg.cn/register"

[project.scripts]
sciatlas = "sciatlas.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
sciatlas = ["builtin_skills.json"]
